--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -109,8 +109,16 @@ $ibo-field--value--padding-bottom--is-fullscreen: $ibo-field--label--padding-y--
   display: table-cell;
   vertical-align: top;
   padding-right: 10px;
+
+  > input[type="checkbox"] {
+    margin-left: 5px;
+  }
 }
 
+.multi_values, .mono_value {
+  display: inline-block;
+  padding-left: 5px;
+}
 /* Fullscreen mode */
 .ibo-field-large {
   &.ibo-is-fullscreen {
