--- a/templates/base/components/field/layout.html.twig
+++ b/templates/base/components/field/layout.html.twig
@@ -25,6 +25,6 @@
 		{% endfor %}
 	</div>
 	{% if oUIBlock.GetComments() %}
-        <div class="ibo-field--comments">{{ oUIBlock.GetComments() }}</div>
-	{% endif %}
+        <div class="ibo-field--comments">{{ oUIBlock.GetComments()|raw }}</div>
+    {% endif %}
 </div>
