--- a/templates/base/components/title/titleforobjectdetails.html.twig
+++ b/templates/base/components/title/titleforobjectdetails.html.twig
@@ -3,9 +3,12 @@
 {% extends 'base/components/title/layout.html.twig' %}
 
 {% block iboPageTitleText %}
-    <h1 class="ibo-title--for-object-details">{{ oUIBlock.GetClassName() }} <span class="ibo-title--emphasis">{{ oUIBlock.GetObjectName()|raw }}</span></h1>
-    <div class="ibo-title--status">
-        <span class="ibo-title--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}"></span>
-        <span class="ibo-title--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
+    <h1 class="ibo-title--for-object-details">{{ oUIBlock.GetObjectName()|raw }}</h1>
+    <div class="ibo-title--subtitle">
+        <span class="ibo-title--status">
+            <span class="ibo-title--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}"></span>
+            <span class="ibo-title--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
+        </span>
+        <span class="ibo-title--object-class">{{ oUIBlock.GetClassName() }}</span>
     </div>
 {% endblock %}
