N°2844 - Fix image attribute display and editing

--- a/css/backoffice/components/input/_all.scss
+++ b/css/backoffice/components/input/_all.scss
@@ -4,11 +4,12 @@
  */
 
 @import "input";
-@import "input-select";
 @import "input-checkbox";
 @import "input-date";
 @import "input-datetime";
 @import "input-duration";
+@import "input-image";
+@import "input-select";
 @import "input-select-icon";
 @import "input-string";
 @import "input-tagset";
