--- a/templates/base/components/datatable/static/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/layout.ready.js.twig
@@ -46,5 +46,11 @@ $('#{{ oUIBlock.GetId() }}').DataTable({
             sortable: true
         },
         {% endfor %}
-    ]
+    ],
+    initComplete: function () {
+        $('#{{ oUIBlock.GetId() }}').trigger('inited');
+    },
+    drawCallback: function(){
+        $('#{{ oUIBlock.GetId() }}').trigger('drawn');
+    }
 });
