--- a/css/backoffice/components/input/_input-image.scss
+++ b/css/backoffice/components/input/_input-image.scss
@@ -34,6 +34,7 @@ $ibo-input-image--edit-buttons--elements-spacing: $ibo-input-image--edit-buttons
     bottom: 0;
     left: 0;
     right: 0;
+    width: 100%;
     opacity: 0;
   }
 }
