--- a/css/backoffice/application/display-block/_all.scss
+++ b/css/backoffice/application/display-block/_all.scss
@@ -16,12 +16,4 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
-@import "utils/all";
-@import "vendors/all";
-@import "base/all";
-@import "components/all";
-@import "layout/all";
-@import "pages/all";
-@import "application/all";
-@import "themes/all";
-@import "shame";
+@import "block-list";
