Fix medallion icon block scss variables

--- a/css/backoffice/application/display-block/_block-list.scss
+++ b/css/backoffice/application/display-block/_block-list.scss
@@ -3,11 +3,10 @@
   text-align: center;
 }
 .ibo-blocklist--medallion{
-  
   > .ibo-medallion--image{
     margin: 0 auto;
   }
   > .ibo-medallion-icon--description{
-    text-align: center;
+    flex-grow: 1;
   }
 }
