--- a/css/backoffice/components/_medallion-icon.scss
+++ b/css/backoffice/components/_medallion-icon.scss
@@ -2,20 +2,29 @@
  * copyright   Copyright (C) 2010-2021 Combodo SARL
  * license     http://opensource.org/licenses/AGPL-3.0
  */
+$ibo-medallion-icon--padding-y: 13px !default;
+$ibo-medallion-icon--padding-x: 0 !default;
+
+$ibo-medallion-icon--image--diameter: 48px !default;
+$ibo-medallion-icon--image--padding: 2px !default;
+$ibo-medallion-icon--image--border-radius: $ibo-border-radius-full !default;
+$ibo-medallion-icon--image--background-color: $ibo-color-blue-200 !default;
+
+$ibo-medallion-icon--description--padding-left: 8px !default;
+
 .ibo-medallion-icon{
   display: flex;
-  padding: 13px 0px
+  padding: $ibo-medallion-icon--padding-y $ibo-medallion-icon--padding-x;
 }
 .ibo-medallion--image{
-  border-radius: $ibo-border-radius-full;
-  background-color: $ibo-color-blue-200;
-  
-  height: 48px;
-  width: 48px;
-  padding: 2px;
+  height: $ibo-medallion-icon--image--diameter;
+  width: $ibo-medallion-icon--image--diameter;
+  padding: $ibo-medallion-icon--image--padding;
+  border-radius: $ibo-medallion-icon--image--border-radius;
+  background-color: $ibo-medallion-icon--image--background-color;
 }
 
 .ibo-medallion-icon--description{
   display: inline-block;
-  padding-left: 8px;
+  padding-left: $ibo-medallion-icon--description--padding-left;
 }
