Fix object details width when using vertical tabs

--- a/css/backoffice/layout/blocks-integrations/_panel-with-tab-container.scss
+++ b/css/backoffice/layout/blocks-integrations/_panel-with-tab-container.scss
@@ -23,6 +23,7 @@ $ibo-panel-with-tab-container--margin-x: -1 * $ibo-panel--body--padding-x !defau
 			> .ibo-tab-container--tab-container-list{
 				height: 100%;
 				overflow-y: auto;
+        flex-grow: 1;
 			}
 		}
 	}
