--- a/templates/base/components/title/titleforobjectdetails.html.twig
+++ b/templates/base/components/title/titleforobjectdetails.html.twig
@@ -5,10 +5,12 @@
 {% block iboPageTitleText %}
     <h1 class="ibo-title--for-object-details">{{ oUIBlock.GetObjectName()|raw }}</h1>
     <div class="ibo-title--subtitle">
-        <span class="ibo-title--status">
-            <span class="ibo-title--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}"></span>
-            <span class="ibo-title--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
-        </span>
+        {% if oUIBlock.GetStatusLabel() is not empty %}
+            <span class="ibo-title--status">
+                <span class="ibo-title--status-dot ibo-is-state-{{ oUIBlock.GetStatusColor() }}"></span>
+                <span class="ibo-title--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
+            </span>
+        {% endif %}
         <span class="ibo-title--object-class">{{ oUIBlock.GetClassName() }}</span>
     </div>
 {% endblock %}
