--- a/templates/base/layouts/activity-panel/layout.js.twig
+++ b/templates/base/layouts/activity-panel/layout.js.twig
@@ -1,5 +1,6 @@
 $('#{{ oUIBlock.GetId() }}').activity_panel({
     datetime_format: {{ oUIBlock.GetDateTimeFormatForJSWidget()|json_encode|raw }},
+    datetimes_reformat_limit: {{ get_config_parameter('activity_panel.datetimes_reformat_limit') }},
     {% if oUIBlock.HasTransactionId() %}transaction_id: {{ oUIBlock.GetTransactionId()|var_export }},{% endif %}
     lock_enabled: {{ oUIBlock.IsLockEnabled()|var_export }},
     lock_watcher_period: {{ get_config_parameter('activity_panel.lock_watcher_period') }},
