3548 - disable core update if a file integrity problem is detected

--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -54,7 +54,7 @@
 
     </fieldset>
 
-    <fieldset>
+    <fieldset id="form-update-outer">
         <legend>{{ 'iTopUpdate:UI:SelectUpdateFile'|dict_s }}</legend>
 
         <div class="details">
